# rust_life

./: Cargo.toml
crab_ray/: Cargo.toml
crab_ray/src/: color.rs  main.rs  raytracer.rs
fader/: .gitignore  Cargo.toml  build.rs  config.example.rs  rust-toolchain.toml
fader/py/: code.py  led.py  read.py
fader/src/: main.rs  touch.rs
life/: Cargo.toml
life/benches/: bench.rs
life/src/: game.rs  gui.rs  lib.rs  ndgame.rs  pattern_finder.rs
optimizer/: Cargo.toml
optimizer/src/: annealing.rs  lib.rs
src/: life.rs  main.rs
