[package]
name = "fader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "=0.3.2"
defmt-rtt = "0.3"
embassy-executor = { version = "0.2.0", features = ["defmt", "executor-thread", "arch-cortex-m", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "nightly", "time-driver"] }
embassy-time = { version = "0.1.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
futures = { version = "0.3.28", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4b303949bff82cb328b75e37e9e03038d8d0e778" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "4b303949bff82cb328b75e37e9e03038d8d0e778" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4b303949bff82cb328b75e37e9e03038d8d0e778" }

[profile.release]
debug = 1
